[package]
name = "reniced"
version = "0.1.0"
edition = "2021"
license = "GPL-2-or-later"
description = "Renice processes using regex rules"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = { version = "0.11.10", default-features = false, features = ["auto-color"] }
libc = "0.2.186"
log = "0.4.30"
regex = "1.12.3"
sysinfo = "0.39.2"
thiserror = "2.0.18"

[target.'cfg(unix)'.dependencies]
syslog = "7"

[target.'cfg(windows)'.dependencies]
winlog = "0.2"

[dev-dependencies]
libc = "0.2.186"
tempfile = "3"

[features]
default = ["linux-extensions"]

linux-extensions = []

[profile.release]
lto = true
codegen-units = 1
strip = true

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
]
