[package]
description = "Renice processes using regex rules"
edition = "2021"
license = "GPL-2-or-later"
name = "reniced"
version = "0.1.0"
authors = ["Michael Cummings <mgcummings@yahoo.com>"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.6"
clap-version-flag = "1.0"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
libc = "0.2"
log = "0.4"
regex = "1.12"
sysinfo = "0.39"
thiserror = "2.0"

[target.'cfg(unix)'.dependencies]
syslog = "7"

[target.'cfg(windows)'.dependencies]
winlog = "0.2"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
] }

[dev-dependencies]
libc = "0.2"
sysinfo = "0.39"
tempfile = "3.27"

[profile.release]
lto = true
codegen-units = 1
strip = true
